--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 spdlog (1.4-1) UNRELEASED; urgency=low
 
-  * Initial release (Closes: #<bug>)
+  * Initial release (Closes: #800337)
 
  -- Michael R. Crusoe <crusoe@ucdavis.edu>  Fri, 18 Sep 2015 20:31:46 -0700
