--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1.6-2) UNRELEASED; urgency=medium
+
+  * Fix VCS-Git URL.
+
+ -- Michael R. Crusoe <crusoe@ucdavis.edu>  Mon, 01 Feb 2016 07:23:47 -0800
+
 spdlog (1.6-1) unstable; urgency=medium
 
   * Update to version 1.6
