--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-spdlog (1.6-2) UNRELEASED; urgency=medium
+spdlog (1.6-2) unstable; urgency=medium
 
   * Fix VCS-Git URL.
 
- -- Michael R. Crusoe <crusoe@ucdavis.edu>  Mon, 01 Feb 2016 07:23:47 -0800
+ -- Michael R. Crusoe <crusoe@ucdavis.edu>  Sun, 28 Feb 2016 17:10:41 -0800
 
 spdlog (1.6-1) unstable; urgency=medium
 
