--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1.8-1) unstable; urgency=medium
+
+  * new upstream release
+
+ -- Michael R. Crusoe <michael.crusoe@gmail.com>  Tue, 17 May 2016 02:52:07 -0700
+
 spdlog (1.7-1) unstable; urgency=medium
 
   * new upstream release
