--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1.12-1) unstable; urgency=medium
+
+  * new upstream release
+
+ -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sun, 18 Sep 2016 05:52:07 -0700
+
 spdlog (1.11-1) unstable; urgency=medium
 
   * new upstream release
