--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1:0.11.0-2) unstable; urgency=medium
+
+  * Correct URL to upstream
+
+ -- Michael R. Crusoe <michael.crusoe@gmail.com>  Sun, 09 Oct 2016 05:26:25 -0700
+
 spdlog (1:0.11.0-1) unstable; urgency=medium
 
   * Switch to correct upstream, increment epoch due to different version
