--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1:0.14.0-1kern1) xenial; urgency=medium
+
+  * Imported Upstream version 0.14.0
+
+ -- KERN packaging <packaging@kernsuite.info>  Mon, 04 Dec 2017 17:09:32 +0200
+
 spdlog (1:0.11.0-2kern2) xenial; urgency=medium
 
   * update signature
