--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spdlog (1:0.17.0-1kern1) bionic; urgency=medium
+
+  * New upstream version 0.17.0
+
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 29 May 2018 11:46:29 +0000
+
 spdlog (1:0.11.0-2kern2) xenial; urgency=medium
 
   * update signature
